--- a/style.css
+++ b/style.css
@@ -4,21 +4,28 @@
 	to classes.
 */
 
-html, body, #main{
+:root{
+	--backgroundColor: #000000;
+	--foregroundColor: #FFFFFF;
+	--borderColor: #AAAAAA;
+}
+
+html, body{
 	/*
 		Temporary fix, there's some weirdness going on with the main height
 	*/
 	height: 96%;
+	background-color: black;
+	color: white;
+	text-decoration: none;
+	font-family: sans-serif;
 }
 
-/*
-#main\.sidebarleft\.panel\.list > li{
-	list-style: none;
-	border: 1px solid grey;
-	margin-top: 2px;
-}*/
+div.main{
+	height: 100%;
+}
 
-div.leftColumn > div.verticallyCollapsedPanel > ul {
+ul{
 	margin: 0;
 	padding: 0;
 }
@@ -32,13 +39,19 @@ header.top{
 	text-align: center;
 }
 
+fieldset{
+	font-family: monospace;
+	font-size: 80%;
+}
+
 div.leftColumn{
 	width: 25%;
 	float: left;
 	clear: both;
 	font-size: 80%;
 	font-family: monospace;;
-	height: 100%;
+	height: 80%;
+	overflow: scroll;
 }
 
 div.centerColumn{
@@ -82,41 +95,79 @@ nav{
 }
 
 input[type=button], input[type=submit]{
-	background-color: black;
-	color: white;
-	border: 1px solid #888888;
+	color: var(--foregroundColor);
+	background-color: var(--backgroundColor);
+	border: 1px solid var(--borderColor);
 	border-radius: 4px;
 }
 
 input[type=button]:hover, input[type=submit]:hover{
-	background-color: white;
-	color: black;
-	border: 1px solid #888888;
+	color: var(--backgroundColor);
+	background-color: var(--foregroundColor);
+	border: 1px solid var(--borderColor);
 	border-radius: 4px;
+	cursor: pointer;
 }
 
 input[type=button].selected{
 	background-color: white;
 	color: black;
-	border: 1px solid #888888;
+	border: 1px solid var(--borderColor);
 	border-radius: 4px;
 }
 
 div.verticallyCollapsedPanel{
+	/*overflow: scroll;*/
 	height: 50%;
-	overflow: scroll;
-	border: 1px solid #888888;
+
+	/*border: 1px solid var(--borderColor);*/
+	/*height: 75%;*/
+}
+
+label.uploadLabel{
+	color: var(--foregroundColor);
+	background-color: var(--backgroundColor);
+	border: 1px solid var(--borderColor);
+	text-decoration: none;
+	border-radius: 4px;
+	padding-left: .8%;
+	padding-right: .8%;
+	padding-top: .25%;
+	padding-bottom: .25%;
+	font-size: 85%;
 }
 
 label.uploadLabel:hover{
 	color: white;
-	background-color: #888888;
+	color: var(--backgroundColor);
+	background-color: var(--foregroundColor);
+	border: 1px solid var(--borderColor);
 	cursor: pointer;
+}
+
+a.downloadLink{
+	color: var(--foregroundColor);
+	background-color: var(--backgroundColor);
+	border: 1px solid var(--borderColor);
+	text-decoration: none;
+	border-radius: 4px;
+	padding-left: .8%;
+	padding-right: .8%;
+	padding-top: .25%;
+	padding-bottom: .25%;
+	font-size: 85%;
+}
+
+a.downloadLink:hover{
+	color: var(--backgroundColor);
+	background-color: var(--foregroundColor);
+	border: 1px solid var(--borderColor);
+	text-decoration: none;
 }
 
 label.uploadLabel:moz-hover{
 	color: white;
-	background-color: #888888;
+	border: 1px solid var(--borderColor);
 	cursor: pointer;
 }
 
@@ -126,34 +177,22 @@ h1, h2, h3, h4, h5, h6{
 	padding: 0;
 }
 
-body{
-	background-color: black;
-	color: white;
-	text-decoration: none;
-}
-
 a{
 	text-decoration: none;
 	color: white;
 	background-color: #000000;
 }
 
-canvas{
-  border: 1px solid #888888;
+a:hover{
+	text-decoration: underline;
 }
 
-a:hover{
-	color: white;
-	background-color: #888888;
+canvas{
+  border: 1px solid #888888;
 }
 
 a:moz-hover{
 	text-decoration: none;
 	color: white;
 	background-color: #888888;
-}
-
-fieldset{
-	font-family: monospace;
-	font-size: 80%;
 }
